It's almost working: the place request passes from GWTP to UF. Just a div sizing issue left to figure out...

--- a/resources/src/main/webapp/App.html
+++ b/resources/src/main/webapp/App.html
@@ -12,6 +12,10 @@
     <!-- default locale -->
     <!--meta name="gwt:property" content="locale=de"-->
 
+
+	<script type="text/javascript">
+	  erraiBusRemoteCommunicationEnabled = false;
+	</script>
     <script type="text/javascript" language="javascript" src="app/app.nocache.js"></script>
     <link rel="shortcut icon" href="/console/images/favicon.ico" />
 </head>
