--- a/resources/src/main/webapp/App.html
+++ b/resources/src/main/webapp/App.html
@@ -24,7 +24,7 @@
 <!-- history iframe required on IE -->
 <iframe src="javascript:''" id="__gwt_historyFrame" style="width:0px;height:0px;border:0px"></iframe>
 
-<!-- pre load images-->
-<div style="visibility:hidden"><img src="images/loading_lite.gif"/></div>
+<center><div id='loading-panel'><img src='images/loading_lite.gif' style='padding-top:3px;vertical-align:middle'/> Loading ... </div></center>
+
 </body >
 </html>
