--- a/resources/src/main/webapp/App.html
+++ b/resources/src/main/webapp/App.html
@@ -12,7 +12,9 @@
     <!-- default locale -->
     <!--meta name="gwt:property" content="locale=de"-->
 
-
+    <style type="text/css">
+      #loading-panel{margin-top:200px;margin-left:auto;margin-right:auto;height:50px;width:120px;border:1px solid #cdcdcd;background-color:#ffffff;padding-top:15px;-moz-border-radius:2px;border-radius:2px;-moz-box-shadow:6px 6px 6px #e3e3e3,-6px 6px 6px #e3e3e3,6px -6px 6px #e3e3e3,-6px -6px 6px #e3e3e3;-webkit-box-shadow:6px 6px 6px #e3e3e3,-6px 6px 6px #e3e3e3,6px -6px 6px #e3e3e3,-6px -6px 6px #e3e3e3;box-shadow:6px 6px 6px #e3e3e3,-6px 6px 6px #e3e3e3,6px -6px 6px #e3e3e3,-6px -6px 6px #e3e3e3;}
+    </style>
 	<script type="text/javascript">
 	  erraiBusRemoteCommunicationEnabled = false;
 	</script>
